working build on android

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">fasting_app</string>
+    <string name="facebook_app_id">496611707741304</string>
 </resources>
